added hidden message for saveStorage.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+      <p class="hideMessage style" id="saved-message">
+        Added to <code>local storage </code>
+        <i class="green fa-solid fa-check"></i>
+      </p>
       <!-- Timeblocks go here -->
     </div>
 
